# reductstore_agent-release

./: .pre-commit-config.yaml  CHANGELOG.rst  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  setup.cfg  setup.py  tracks.yaml
.github/workflows/: ci.yml
config/: params.yml
debian/: changelog  control  copyright  gbp.conf  rules
launch/: reductstore_agent_launch.py
reductstore_agent/: __init__.py  config_models.py  recorder.py  utils.py
rpm/: template.spec
test/: conftest.py  test_copyright.py  test_entry_point.py  test_flake8.py  test_pep257.py  test_recorder_params.py  test_recorder_state.py  test_si_units.py  test_storage.py  test_topic_subscription.py
