<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>reductstore_agent</name>
  <version>0.2.0</version>
  <description>ROS2 recorder node that logs selected topics to ReductStore, with YAML-driven pipelines (mcap/raw, compression, splitting, down-sampling, labelling).</description>

  <maintainer email="info@reduct.store">Anthony Cavin (@anthonycvn)</maintainer>
  <maintainer email="info@reduct.store">Alexey Timin (@atimin)</maintainer>
  <author email="info@reduct.store">Anthony Cavin</author>

  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
